--- a/aria2.conf
+++ b/aria2.conf
@@ -3,7 +3,7 @@ dir=/home/yingbin/Downloads/aria2
 disable-ipv6=true
 
 # 文件预分配
-file-allocation=true
+file-allocation=none
 
 #打开rpc的目的是为了给web管理端用
 enable-rpc=true
@@ -28,7 +28,7 @@ save-session-interval=120
 connect-timeout=120
 #lowest-speed-limit=10K
 #同服务器连接数
-max-connection-per-server=20
+max-connection-per-server=16
 #max-file-not-found=2
 #最小文件分片大小, 下载线程数上限取决于能分出多少片, 对于小文件重要
 min-split-size=20M
